--- a/admin.html
+++ b/admin.html
@@ -224,6 +224,7 @@
           <input id="new-badge-color" class="text-input" type="color" value="#ffffff" />
           <input id="new-badge-priority" class="text-input" type="number" placeholder="Priority" />
           <input id="new-badge-role" class="text-input" type="text" placeholder="Discord Role ID" />
+          <input id="new-badge-guild" class="text-input" type="text" placeholder="Discord Guild ID" />
           <label class="row" style="align-items:center;gap:.25rem">
             <input type="checkbox" id="new-badge-is-system"> System
           </label>
@@ -262,12 +263,13 @@
                 <th>System</th>
                 <th>Created</th>
                 <th>Discord Role ID</th>
+                <th>Discord Guild ID</th>
                 <th class="right">Actions</th>
               </tr>
             </thead>
             <tbody id="badges-tbody">
               <tr>
-                <td colspan="9" class="muted">No badges yet.</td>
+                <td colspan="10" class="muted">No badges yet.</td>
               </tr>
             </tbody>
           </table>
@@ -318,6 +320,7 @@
       <input id="edit-badge-color" class="text-input" type="color" />
       <input id="edit-badge-desc" class="text-input" type="text" placeholder="Description" />
       <input id="edit-badge-role" class="text-input" type="text" placeholder="Discord Role ID" />
+      <input id="edit-badge-guild" class="text-input" type="text" placeholder="Discord Guild ID" />
     </div>
     <div class="row" style="justify-content:flex-end;gap:.5rem;margin-top:1rem">
       <button class="invite" id="badge-delete-btn">Delete</button>
@@ -384,6 +387,7 @@
       const colorInput = document.getElementById('edit-badge-color');
       const descInput = document.getElementById('edit-badge-desc');
       const roleInput = document.getElementById('edit-badge-role');
+      const guildInput = document.getElementById('edit-badge-guild');
       const saveBtn = document.getElementById('badge-save-btn');
       const deleteBtn = document.getElementById('badge-delete-btn');
       const cancelBtn = document.getElementById('badge-cancel-btn');
@@ -391,6 +395,7 @@
       colorInput.value = badge.color || '#ffffff';
       descInput.value = badge.description || '';
       roleInput.value = badge.discord_role_id || '';
+      guildInput.value = badge.discord_guild_id || '';
 
       dialog.showModal();
 
@@ -407,7 +412,8 @@
             action: 'save',
             color: colorInput.value,
             description: descInput.value,
-            discordRoleId: roleInput.value
+            discordRoleId: roleInput.value,
+            discordGuildId: guildInput.value
           });
         }
         function onDelete() { cleanup({ action: 'delete' }); }
@@ -500,7 +506,7 @@
         const tbody = document.getElementById('badges-tbody');
         if (!tbody) return;
         if (!badges.length) {
-          tbody.innerHTML = `<tr><td colspan="9" class="muted">No badges yet.</td></tr>`;
+          tbody.innerHTML = `<tr><td colspan="10" class="muted">No badges yet.</td></tr>`;
           return;
         }
         tbody.innerHTML = badges.map(b => `
@@ -515,6 +521,7 @@
             <td>${b.is_system ? 'Yes' : 'No'}</td>
             <td>${fmtDate(b.created_at)}</td>
             <td>${b.discord_role_id || '—'}</td>
+            <td>${b.discord_guild_id || '—'}</td>
             <td class="right"><button class="invite btn-badge-edit" data-id="${b.id}">Edit</button></td>
           </tr>
         `).join('');
@@ -550,7 +557,7 @@
           badges.splice(0, badges.length, ...list);
           renderBadges();
           for (const b of badges) {
-            if (b.discord_role_id) {
+            if (b.discord_role_id && b.discord_guild_id) {
               try {
                 await fetchJSON('/badges/assign-role', {
                   method: 'POST',
@@ -730,6 +737,7 @@
           const colorInput = document.getElementById('new-badge-color');
           const prioInput = document.getElementById('new-badge-priority');
           const roleInput = document.getElementById('new-badge-role');
+          const guildInput = document.getElementById('new-badge-guild');
           const sysInput = document.getElementById('new-badge-is-system');
 
           const name = (nameInput.value || '').trim();
@@ -738,6 +746,7 @@
           const color = colorInput.value || '#ffffff';
           const priority = Number(prioInput.value) || 0;
           const discordRoleId = (roleInput.value || '').trim();
+          const discordGuildId = (guildInput.value || '').trim();
           const isSystem = sysInput.checked;
           if (!name) return alert('Enter name.');
 
@@ -752,7 +761,8 @@
                 color,
                 priority,
                 is_system: isSystem,
-                discord_role_id: discordRoleId
+                discord_role_id: discordRoleId,
+                discord_guild_id: discordGuildId
               })
             });
             await loadBadges();
@@ -766,6 +776,7 @@
           colorInput.value = '#ffffff';
           prioInput.value = '';
           roleInput.value = '';
+          guildInput.value = '';
           sysInput.checked = false;
         });
         document.getElementById('badges-tbody').addEventListener('click', async (ev) => {
@@ -794,7 +805,7 @@
             return;
           }
 
-          const { color, description, discordRoleId } = res;
+          const { color, description, discordRoleId, discordGuildId } = res;
           try {
             await fetchJSON('/badges/update', {
               method: 'POST',
@@ -803,7 +814,8 @@
                 id,
                 description,
                 color,
-                discord_role_id: discordRoleId || null
+                discord_role_id: discordRoleId || null,
+                discord_guild_id: discordGuildId || null
               })
             });
             await loadBadges();
