--- a/creators/creator-page-template.html
+++ b/creators/creator-page-template.html
@@ -40,7 +40,7 @@
   <div class="main-container">
     <div class="main">
       <h1>About {CREATOR_DISPLAY_NAME}</h1>
-      <p class="about-me">{TEXT}</p>
+      <p class="about-me">{ABOUT_TEXT}</p>
       <div class="pfp-container">
         <img class="pfp" src="{PFP_SRC}" alt="{CREATOR_DISPLAY_NAME} profile image" />
       </div>
@@ -48,7 +48,7 @@
 
     <div class="secondary">
       <h1>Join the Discord!</h1>
-      <p>{TEXT}</p>
+      <p>{DISCORD_TEXT}</p>
       <br>
       <h3><a class="discordinvite" href="{DISCORD_INVITE}" target="_blank" rel="noopener">Join</a></h3>
     </div>
