--- a/creators/edit.html
+++ b/creators/edit.html
@@ -17,17 +17,52 @@
       }
     })();
   </script>
+  <style>
+    .row {
+      display: flex;
+      gap: .5rem;
+      flex-wrap: wrap;
+      margin-bottom: .5rem;
+    }
+    .text-input {
+      padding: .6rem .8rem;
+      border-radius: 12px;
+      border: 1px solid var(--border, #4442);
+      background: var(--bg, transparent);
+      color: inherit;
+      font: inherit;
+      min-width: 120px;
+    }
+    .section-gap {
+      margin-top: 1.25rem;
+    }
+  </style>
 </head>
 <body>
   <global-header></global-header>
   <div class="main-container">
     <div class="main">
       <h1>Edit Your Page</h1>
-      <p>Update the JSON below and click Save or Publish.</p>
-      <textarea id="page-data" style="width:100%;height:300px;"></textarea>
+      <div class="section-gap">
+        <label for="about-input">About Me</label>
+        <textarea id="about-input" class="text-input" style="width:100%;height:100px;"></textarea>
+      </div>
+      <div class="section-gap">
+        <label for="discord-text-input">Discord Section Text</label>
+        <textarea id="discord-text-input" class="text-input" style="width:100%;height:100px;"></textarea>
+      </div>
+      <div class="section-gap">
+        <label for="discord-invite-input">Discord Invite Link</label>
+        <input id="discord-invite-input" class="text-input" type="text" style="width:100%;" />
+      </div>
+      <div class="section-gap">
+        <h2>Social Links</h2>
+        <div id="links-container"></div>
+        <button class="invite" id="add-link" type="button">Add Link</button>
+      </div>
       <div style="margin-top:1rem;display:flex;gap:0.5rem;flex-wrap:wrap;">
-        <button class="invite" id="save-btn">Save Draft</button>
-        <button class="invite" id="publish-btn">Publish</button>
+        <button class="invite" id="save-btn" type="button">Save Draft</button>
+        <button class="invite" id="publish-btn" type="button">Publish</button>
       </div>
       <p id="status" style="margin-top:1rem;"></p>
     </div>
@@ -35,32 +70,74 @@
   <global-footer></global-footer>
   <script>
     document.addEventListener('DOMContentLoaded', async () => {
-      const ta = document.getElementById('page-data');
+      const aboutInput = document.getElementById('about-input');
+      const discordTextInput = document.getElementById('discord-text-input');
+      const discordInviteInput = document.getElementById('discord-invite-input');
+      const linksContainer = document.getElementById('links-container');
       const status = document.getElementById('status');
+      let existing = {};
+
+      function createLinkRow(link = {}) {
+        const row = document.createElement('div');
+        row.className = 'row';
+        row.innerHTML = `
+          <input type="text" class="text-input link-label" placeholder="Label" value="${link.label || ''}">
+          <input type="text" class="text-input link-url" placeholder="URL" value="${link.url || ''}">
+          <input type="text" class="text-input link-icon" placeholder="Icon URL" value="${link.icon || ''}">
+          <button class="invite remove-link" type="button">Remove</button>
+        `;
+        row.querySelector('.remove-link').addEventListener('click', () => row.remove());
+        linksContainer.appendChild(row);
+      }
+
+      document.getElementById('add-link').addEventListener('click', () => createLinkRow());
+
       try {
         const res = await fetch('/creators/me', { credentials: 'include', cache: 'no-store' });
         if (res.ok) {
           const info = await res.json();
-          ta.value = JSON.stringify(info.data_json || {}, null, 2);
+          existing = info.data_json || {};
+          aboutInput.value = existing.about || '';
+          discordTextInput.value = existing.discord_text || '';
+          discordInviteInput.value = existing.discord_invite || '';
+          if (Array.isArray(existing.social_links)) {
+            for (const l of existing.social_links) createLinkRow(l);
+          }
         } else {
           status.textContent = 'Not authorized to edit.';
         }
       } catch (e) { status.textContent = 'Failed to load.'; }
 
-      document.getElementById('save-btn')?.addEventListener('click', async () => {
+      async function submit(path) {
+        const links = [];
+        linksContainer.querySelectorAll('.row').forEach(row => {
+          const label = row.querySelector('.link-label').value.trim();
+          const url = row.querySelector('.link-url').value.trim();
+          const icon = row.querySelector('.link-icon').value.trim();
+          if (label && url) links.push(icon ? { label, url, icon } : { label, url });
+        });
+        const payload = Object.assign({}, existing, {
+          about: aboutInput.value.trim(),
+          discord_text: discordTextInput.value.trim(),
+          discord_invite: discordInviteInput.value.trim(),
+          social_links: links
+        });
         try {
-          const data = JSON.parse(ta.value || '{}');
-          const r = await fetch('/creators/save', { method: 'POST', credentials: 'include', cache: 'no-store', headers: {'content-type':'application/json'}, body: JSON.stringify(data) });
-          status.textContent = r.ok ? 'Draft saved.' : 'Failed to save.';
-        } catch { status.textContent = 'Invalid JSON.'; }
-      });
-      document.getElementById('publish-btn')?.addEventListener('click', async () => {
-        try {
-          const data = JSON.parse(ta.value || '{}');
-          const r = await fetch('/creators/publish', { method: 'POST', credentials: 'include', cache: 'no-store', headers: {'content-type':'application/json'}, body: JSON.stringify(data) });
-          status.textContent = r.ok ? 'Published!' : 'Failed to publish.';
-        } catch { status.textContent = 'Invalid JSON.'; }
-      });
+          const r = await fetch(path, {
+            method: 'POST',
+            credentials: 'include',
+            cache: 'no-store',
+            headers: { 'content-type': 'application/json' },
+            body: JSON.stringify(payload)
+          });
+          status.textContent = r.ok ? (path.endsWith('publish') ? 'Published!' : 'Draft saved.') : 'Failed to save.';
+        } catch {
+          status.textContent = 'Failed to save.';
+        }
+      }
+
+      document.getElementById('save-btn').addEventListener('click', () => submit('/creators/save'));
+      document.getElementById('publish-btn').addEventListener('click', () => submit('/creators/publish'));
     });
   </script>
 </body>
