Fix edit page 404 by renaming to directory

--- a/profile.html
+++ b/profile.html
@@ -107,7 +107,7 @@
             <div style="margin-top:1rem; display:flex; gap:0.5rem; flex-wrap:wrap;">
               <button class="invite" id="open-admin" style="display:none;">Open Admin</button>
               <button class="invite" id="my-page" style="display:none;">My Page</button>
-              <a class="invite" id="edit-page" style="display:none;" href="/creators/edit.html">Edit Page</a>
+              <a class="invite" id="edit-page" style="display:none;" href="/creators/edit/">Edit Page</a>
             </div>
 
           </div>
