--- a/admin.html
+++ b/admin.html
@@ -221,7 +221,7 @@
         <div class="row" style="flex-wrap:wrap">
           <input id="new-badge-name" class="text-input" type="text" placeholder="Name" />
           <input id="new-badge-desc" class="text-input" type="text" placeholder="Description" />
-          <input id="new-badge-color" class="text-input" type="color" value="#ffffff" />
+          <input id="new-badge-color" class="text-input" type="color" value="#ffffff" placeholder="color" />
           <input id="new-badge-priority" class="text-input" type="number" placeholder="Priority" />
           <input id="new-badge-role" class="text-input" type="text" placeholder="Discord Role ID" />
           <input id="new-badge-guild" class="text-input" type="text" placeholder="Discord Guild ID" />
