--- a/creators/edit.html
+++ b/creators/edit.html
@@ -44,11 +44,11 @@
     <div class="main">
       <h1>Edit Your Page</h1>
       <div class="section-gap">
-        <label for="about-input">About Me</label>
+        <label for="about-input">About Me (Markdown supported)</label>
         <textarea id="about-input" class="text-input" style="width:100%;height:100px;"></textarea>
       </div>
       <div class="section-gap">
-        <label for="discord-text-input">Discord Section Text</label>
+        <label for="discord-text-input">Discord Section Text (Markdown supported)</label>
         <textarea id="discord-text-input" class="text-input" style="width:100%;height:100px;"></textarea>
       </div>
       <div class="section-gap">
