--- a/profile.html
+++ b/profile.html
@@ -107,7 +107,7 @@
             <div style="margin-top:1rem; display:flex; gap:0.5rem; flex-wrap:wrap;">
               <button class="invite" id="open-admin" style="display:none;">Open Admin</button>
               <button class="invite" id="my-page" style="display:none;">My Page</button>
-              <a class="invite" id="edit-page" style="display:none;" href="/creators/edit">Edit Page</a>
+              <a class="invite" id="edit-page" style="display:none;" href="/creators/edit?slug=${encodeURIComponent(slug)}">Edit Page</a>
               <select id="edit-any-page" style="display:none;"><option value="">Edit any page...</option></select>
             </div>
 
