--- a/creators/edit.html
+++ b/creators/edit.html
@@ -8,6 +8,11 @@
   <script src="/js/header-footer.js"></script>
   <script src="/js/darkmode.js" defer></script>
   <script src="/public/auth.js" defer></script>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link
+    href="https://fonts.googleapis.com/css2?family=Kodchasan:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;1,200;1,300;1,400;1,500;1,600;1,700&display=swap"
+    rel="stylesheet">
   <script>
     (function () {
       const dm = localStorage.getItem('darkmode');
