--- a/admin.html
+++ b/admin.html
@@ -361,10 +361,13 @@
       return row.global_name || row.username || '(unknown)';
     }
     function discordAvatarUrl(userId, avatarHash, size = 64) {
-      if (avatarHash) return `https://cdn.discordapp.com/avatars/${userId}/${avatarHash}.png?size=${size}`;
+      if (userId && avatarHash) {
+        const ext = avatarHash.startsWith('a_') ? 'gif' : 'png';
+        return `https://cdn.discordapp.com/avatars/${userId}/${avatarHash}.${ext}?size=${size}`;
+      }
       // Discord default avatars 0..5 by userId modulo
       try {
-        const idx = Number(BigInt(userId) % 6n);
+        const idx = BigInt(userId ?? 0n) % 5n;
         return `https://cdn.discordapp.com/embed/avatars/${idx}.png`;
       } catch {
         return `https://cdn.discordapp.com/embed/avatars/0.png`;
